<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppLock Plus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="all">All application</string>
    <string name="download">Download app</string>
    <string name="system">System app</string>
    <string name="system_app">System application</string>
    <string name="dowload_app">Download appplication</string>
    <string name="unknow">Unknow</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="check">Check</string>
    <string name="search">Search</string>
    <string name="sort_by_name_a_z">Sort by name A-Z</string>
    <string name="sort_by_name_z_a">Sort by name Z-A</string>
    <string name="sort_by_date_first">Sort by date first</string>
    <string name="sort_by_date_last">Sort by date last</string>
    
    
    <!--Drawer item  -->
    <string name="home_page">Home page</string>
    <string name="security_settings">Security settings</string>
     <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!-- hint -->
    <string name="hint_search_app">Search application</string>

</resources>