<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search"/>
    <item
        android:id="@+id/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:showAsAction="always"
        android:title="@string/sort">
        <menu>
            <item
                android:id="@+id/menu_sort_by_name"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:showAsAction="always"
                android:title="@string/sort_by_name"/>
            <item
                android:id="@+id/menu_sort_by_date"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:showAsAction="always"
                android:title="@string/sort_by_date"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_checkAll"
        android:icon="@drawable/ic_check_all"
        android:showAsAction="always"
        android:title="@string/check"/>

</menu>